# GplpMask

./: CMakeLists.txt
StringFiles/: AtLoginFlags.txt  MovementFlags.txt  MovementFlags2.txt  NPCFlags.txt  PlayerExtraFlags.txt  PlayerFieldByte2Flags.txt  PlayerFieldByteFlags.txt  PlayerFlags.txt  SpellAttr0.txt  SpellAttr1.txt  SpellAttr10.txt  SpellAttr2.txt  SpellAttr3.txt  SpellAttr4.txt  SpellAttr5.txt  SpellAttr6.txt  SpellAttr7.txt  SpellAttr8.txt  SpellAttr9.txt  SpellClickCastFlags.txt  UnitFlags.txt  UnitFlags2.txt  UnitTypeMask.txt
cmake/compiler/gcc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
src/: main.cpp
